paid/force-app/main/default/objects/PaidAI_Product_Config__mdt/PaidAI_Product_Config__mdt.object-meta.xml
<CustomObject>
    <description>paid.ai integration config for Product2</description>
    <label>PaidAI Product Config</label>
    <pluralLabel>PaidAI Product Configs</pluralLabel>
</CustomObject>