paid/force-app/main/default/objects/PaidAI_Product_Config__mdt/fields/Enable_Price_Sync__c.field-meta.xml
<CustomField>
    <fullName>Enable_Price_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Price Sync</label>
    <type>Checkbox</type>
</CustomField>