paid/force-app/main/default/objects/PaidAI_Product_Config__mdt/fields/External_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Field_Name__c</fullName>
    <label>External Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>