paid/force-app/main/default/objects/PaidAI_Product_Config__mdt/fields/Max_Queueable_Per_Batch__c.field-meta.xml
<CustomField>
    <fullName>Max_Queueable_Per_Batch__c</fullName>
    <label>Max Queueable Per Batch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>