paid/force-app/main/default/objects/PaidAI_Product_Config__mdt/fields/price_Sync_Days__c.field-meta.xml
<CustomField>
    <fullName>price_Sync_Days__c</fullName>
    <label>Price Sync Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>