paid/force-app/main/default/objects/PaidAI_Product_Config__mdt/fields/Salesforce_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Field_API__c</fullName>
    <label>Salesforce Field API</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>