paid/force-app/main/default/objects/PaidAI_Product_Config__mdt/fields/Salesforce_Object__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Object__c</fullName>
    <label>Salesforce Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>